--- a/templates/index.html
+++ b/templates/index.html
@@ -148,82 +148,288 @@
                 <div>
                     <div class="hotel-listing">
 
-                        <!-- hotel 1 -->
-                        <div class="hotel-hover" >
-                            <div class="hotel-card">
-                                <div class="hotel-image">
-                                    <a href="{%url 'ashokam_details' %}">
-                                    <img src="{% static 'image/property_img/ashokam_main.jpeg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
-                                    </a>
-                                    <div class="more-photos">See all</div>
-                                </div>
-                                <div class="hotel-info">
-                                    <div class="hotel-details">
-                                        <a href="{%url 'ashokam_details' %}">
-                                        <h2>Ashokam Beach Resort</h2>
-                                        </a>
-                                        <p><a href="#">Ashokam Beach Resort - View on map</a></p>
-                                        <p> 100 meter Walkable distance to the Beach</p>
-                                        <div class="amenities">
-                                            <span>Car park</span>
-                                            <span> Wi-Fi </span>
-                                            <span>Bike Rent</span>
-                                            <span>Sea-view Rooms</span>
-                                            <span>Swimming Pool </span> 
-                                            <span>Inhouse Restaurant </span>
-                                            <span>Taxi Service</span>
-                                            <span>Activities</span>
-                                        </div>
-                                    </div>
-                                    <div class="cal_now_btn">
-                                        <a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
-    
-                                        <a class="viewmore_a" href="{%url 'ashokam_details' %}">
-                                            <button class="view_more_btn">View more</button>
-                                        </a>
-                                    </div>
-                                  
-                                </div>
+                        <!-- hotel 1-cliff -->
+                    <div class="hotel-hover">
+                        <div class="hotel-card">
+                            <div class="hotel-image">
+                                <a href="{%url 'cliffcounty_details' %}">
+                                <img src="{% static 'image/property_img/cliffcnty_1.jpeg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                </a>
+                                <div class="more-photos">See all</div>
                             </div>
-                        </div>
-                        <!-- hotel 2 -->
-
-                        <div class="hotel-hover">
-                            <div class="hotel-card">
-                                <div class="hotel-image">
+                            <div class="hotel-info">
+                                <div class="hotel-details">
                                     <a href="{%url 'cliffcounty_details' %}">
-                                    <img src="{% static 'image/property_img/cliffcnty_1.jpeg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                    <h2>Cliff County Varkala</h2>
                                     </a>
-                                    <div class="more-photos">See all</div>
+                                    <p><a href="#">Cliff County Varkala - View on map</a></p>
+                                    <p> walkable distance to the Beach</p>
+                                    <div class="amenities">
+                                        <span>Car parking</span>
+                                        <span> Wi-Fi</span>
+                                        <span>Bike Rent</span>
+                                        <span>Taxi services</span>
+                                        <span>Complimentary water bottle </span>
+                                    </div>
                                 </div>
-                                <div class="hotel-info">
-                                    <div class="hotel-details">
-                                        <a href="{%url 'cliffcounty_details' %}">
-                                        <h2>Cliff County Varkala</h2>
-                                        </a>
-                                        <p><a href="#">Cliff County Varkala - View on map</a></p>
-                                        <p> walkable distance to the Beach</p>
-                                        <div class="amenities">
-                                            <span>Car parking</span>
-                                            <span> Wi-Fi</span>
-                                            <span>Bike Rent</span>
-                                            <span>Taxi services</span>
-                                            <span>Complimentary water bottle </span>
-                                        </div>
-                                    </div>
-                                    <div class="cal_now_btn">
-                                        <a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
-    
-                                        <a class="viewmore_a" href="{%url 'cliffcounty_details' %}">
-                                            <button class="view_more_btn">View more</button>
-                                        </a>
-                                    </div>
+                                <div class="details_info">
+                                    <a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+                                    <a class="viewmore_a" href="{%url 'cliffcounty_details' %}">
+                                        <button class="view_more_btn">View more</button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
-                        <a href="{%url 'property_list' %}">
-                        <button class="show-more">Show more...</button>
-                        </a>
+                    </div>
+                    
+                    <!-- hotel 2 ashokam -->
+                    <div class="hotel-hover" >
+                        <div class="hotel-card">
+                            <div class="hotel-image">
+                                <a href="{%url 'ashokam_details' %}">
+                                <img src="{% static 'image/property_img/ashokam_main.jpeg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                </a>
+                                <div class="more-photos">See all</div>
+                            </div>
+                            <div class="hotel-info">
+                                <div class="hotel-details">
+                                    <a href="{%url 'ashokam_details' %}">
+                                    <h2>Ashokam Beach Resort</h2>
+                                    </a>
+                                    <p><a href="#">Ashokam Beach Resort - View on map</a></p>
+                                    <p> 100 meter Walkable distance to the Beach</p>
+                                    <div class="amenities">
+                                        <span>Car park</span>
+                                        <span> Wi-Fi </span>
+                                        <span>Bike Rent</span>
+                                        <span>Sea-view Rooms</span>
+                                        <span>Swimming Pool </span> 
+                                        <span>Inhouse Restaurant </span>
+                                        <span>Taxi Service</span>
+                                        <span>Activities</span>
+                                        <span>Beach View</span>
+                                    </div>
+                                </div>
+                                <div class="details_info">
+                                    <a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+                                    <a class="viewmore_a" href="{%url 'ashokam_details' %}">
+                                        <button class="view_more_btn">View more</button>
+                                    </a>
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- hotel 5 skyframe-->
+                    <div class="hotel-hover">
+                        <div class="hotel-card">
+                            <div class="hotel-image">
+                                <a href="{%url 'skyframe_details' %}">
+                                <img src="{% static 'image/property_img/sky_frame_1.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+                                </a>
+                                <div class="more-photos">See all</div>
+                            </div>
+                            <div class="hotel-info">
+                                <div class="hotel-details">
+                                    <a href="{%url 'skyframe_details' %}">
+                                    <h2>Skyframe Beach Resort</h2>
+                                    </a>
+                                    <p><a href="#">Zaandam, Amsterdam - View on map</a></p>
+                                    <p>Aaliyirakkam Beach, Varkala | 3.0 km drive to Varkala Beach</p>
+                                    <div class="amenities">
+                                        <span>Car parking</span>
+                                        <span> Wi-Fi</span>
+                                        <span>Bike Rent</span>
+                                        <span>Taxi services</span>
+                                        <span>Complimentary water bottle </span>
+                                    </div>
+                                </div>
+                                <div class="details_info">
+                                    <a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+                                    <a class="viewmore_a" href="{%url 'skyframe_details' %}">
+                                        <button class="view_more_btn">View more</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                        <!-- hotel 3 eva-->
+					<div class="hotel-hover">
+						<div class="hotel-card">
+							<div class="hotel-image">
+								<a href="{%url 'evebeach_details' %}">
+								<img src="{% static 'image/property_img/eva_beach_1.jpeg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+								</a>
+								<div class="more-photos">See all</div>
+							</div>
+							<div class="hotel-info">
+								<div class="hotel-details">
+									<a href="{%url 'evebeach_details' %}">
+									<h2>Eva Beach Hotel</h2>
+									</a>
+									<p><a href="#">Eva Beach Hotel - View on map</a></p>
+									<p> walkable distance to the Beach</p>
+									<div class="amenities">
+										<span>Car parking</span>
+										<span> Wi-Fi</span>
+										<span>Bike Rent</span>
+										<span>Taxi services</span>
+										<span>Complimentary water bottle </span>
+									</div>
+								</div>
+								<div class="details_info">
+									<a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+									<a class="viewmore_a" href="{%url 'evebeach_details' %}">
+										<button class="view_more_btn">View more</button>
+									</a>
+								</div>
+								
+							</div>
+						</div>
+					</div>
+
+                    	<!-- hotel 6 villasky-->
+					<div class="hotel-hover">
+						<div class="hotel-card">
+							<div class="hotel-image">
+								<a href="{%url 'villa_skyframe_details' %}">
+								<img src="{% static 'image/property_img/villa_skyframe_1.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+								</a>
+								<div class="more-photos">See all</div>
+							</div>
+							<div class="hotel-info">
+								<div class="hotel-details">
+									<a href="{%url 'villa_skyframe_details' %}">
+									<h2>Villa Skyframe</h2>
+									</a>
+									<p><a href="#">Villa Skyframe  - View on map</a></p>
+									<div class="amenities">
+										<span>Car parking</span>
+										<span> Wi-Fi</span>
+										<span>Bike Rent</span>
+										<span>Taxi services</span>
+										<span>Complimentary water bottle </span>
+									</div>
+								</div>
+								<div class="details_info">
+									<a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+									<a class="viewmore_a" href="{%url 'villa_skyframe_details' %}">
+										<button class="view_more_btn">View more</button>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- hotel 4 haiwa-->
+					<div class="hotel-hover">
+						<div class="hotel-card">
+							<div class="hotel-image">
+								<a href="{%url 'haiwa_details_details' %}">
+								<img src="{% static 'image/property_img/haiwa_hudels.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+								</a>
+								<div class="more-photos">See all</div>
+							</div>
+							<div class="hotel-info">
+								<div class="hotel-details">
+									<a href="{%url 'haiwa_details_details' %}">
+									<h2>The Haiwa By Hudels</h2>
+									</a>
+									<p><a href="#">The Haiwa By Hudels - View on map</a></p>
+									<p>Varkala Beach, Varkala | 4 minutes walk to Varkala Beach</p>
+									<div class="amenities">
+										<span>Car parking</span>
+										<span> Wi-Fi</span>
+										<span>Bike Rent</span>
+										<span>Taxi services</span>
+										<span>Complimentary water bottle </span>
+									</div>
+								</div>
+								<div class="details_info">
+									<a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+									<a class="viewmore_a" href="{%url 'haiwa_details_details' %}">
+										<button class="view_more_btn">View more</button>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- hotel 7 nisara-->
+					<div class="hotel-hover">
+						<div class="hotel-card">
+							<div class="hotel-image">
+								<a href="{%url 'nisara_details' %}">
+								<img src="{% static 'image/property_img/nisara_homestay_1.jpeg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+								</a>
+								<div class="more-photos">See all</div>
+							</div>
+							<div class="hotel-info">
+								<div class="hotel-details">
+									<a href="{%url 'nisara_details' %}">
+									<h2>Nisara Homestay</h2>
+									</a>
+									<p><a href="#">Nisara Homestay - View on map</a></p>
+									<p>
+										Aaliyirakkam Beach, Varkala | 2.7 km drive to Varkala Beach</p>
+									<div class="amenities">
+										<span>Car parking</span>
+										<span>Bike Rent</span>
+										<span>Taxi services</span>
+									</div>
+								</div>
+								<div class="details_info">
+									<a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+									<a class="viewmore_a" href="{%url 'nisara_details' %}">
+										<button class="view_more_btn">View more</button>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					<!-- hotel 8 moonwaves-->
+					<div class="hotel-hover">
+						<div class="hotel-card">
+							<div class="hotel-image">
+								<a href="{%url 'moon_waves_details' %}">
+								<img src="{% static 'image/property_img/moon_waves_1.jpg' %}" alt="City Trip Hostels Zaandam-Amsterdam">
+								</a>
+								<div class="more-photos">See all</div>
+							</div>
+							<div class="hotel-info">
+								<div class="hotel-details">
+									<a href="{%url 'moon_waves_details' %}">
+									<h2>Moon Waves Beach Resort</h2>
+									</a>
+									<p><a href="#">Moon Waves Beach Resort - View on map</a></p>
+									<p>Varkala Beach, Varkala | 2 minutes walk to Varkala Beach</p>
+									<div class="amenities">
+										<span>Car parking</span>
+										<span> Wi-Fi</span>
+										<span>Bike Rent</span>
+										<span>Taxi services</span>
+										<span>Complimentary water bottle</span>
+									</div>
+								</div>
+								<div class="details_info">
+									<a href="tel:+919074582622"><i class="fa fa-phone"  style="font-size: 30px;"></i><p>Call Now</p></a>
+
+									<a class="viewmore_a" href="{%url 'moon_waves_details' %}">
+										<button class="view_more_btn">View more</button>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
                     </div>
                 </div>
             </div>
