--- a/templates/moon_waves_details.html
+++ b/templates/moon_waves_details.html
@@ -79,36 +79,92 @@
                         <div class="main-image">
                             <img src="{% static 'image/property_img/moon_waves_1.jpg' %}" alt="Main Pool">
                             <!-- <p>228 PHOTOS & VIDEOS</p> -->
-                        </div>
+                            </div>
                         <div class="thumbnails">
                             <img src="{% static 'image/property_img/moonwaves_room1.jpg' %}" alt="Video Thumbnail">
-                            <img src="{% static 'image/property_img/03.jpg' %}" alt="Room">
+                            <img src="{% static 'image/property_img/moonwaves_room3.jpeg' %}" alt="Room">
                         </div>
                     </div>
                     <div class="hotel-name">
-                        <h2>Executive Villa King Room with Balcony</h2>
-                        <!-- <div class="button-element">
-                            <button class="view-other-rooms">View Other Rooms</button>
-                            <button class="book-now">Book This Now</button>
-                        </div> -->
-                        
-                        <p>For 2 Adults</p>
-                        <p>Room with Breakfast</p>
-                        <!-- <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p>+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p>
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
+                        <h2>About</h2>
                     </div>
-                    <!-- <div class="book">
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button>
-                    </div>
-                        <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p class="tax-price">+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p> -->
-                        <!-- <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
+                    <p class="tax-price">
+                        Located in Varkala, a 3-minute walk from Varkala Beach, Moon Waves Beach Resort provides accommodations with a terrace, free private parking, and a restaurant. <br> The property is around 46.7 km from Sree Padmanabhaswamy Temple, 46.7 km from Napier Museum, and a 16-minute walk from Janardhana swamy Temple. <br> The property has a 24-hour front desk, airport transportation, room service, and free WIFI. At the resort, every room has a desk. With a private bathroom equipped with a shower and free toiletries, <br> certain Moon Waves Beach Resort units also provide guests with a patio.                    </p> <br>
+
+                    <span>Room Types</span><br>
+                        <div class="list_div">
+                            <li>Standard NON AC  --  Room With Free Cancellation ( No meals included )</li>
+                            <li>deluxe  AC  --  Room With Free Cancellation ( No meals included )</li>
+                            <li>4 Bed NON AC Room  --  Room With Free Cancellation ( No meals included ) & Room With Free Cancellation ( Breakfast only)</li>
+                            <li>Wood House AC  --  Room With Free Cancellation ( No meals included ) </li>
+                            <li>6 Bed Dorm AC  --  Room With Free Cancellation ( No meals included ) </li>
+                        </div><br><br>
+                        <!-- <span>Property Rules</span><br> -->
+                        <div class="list_div">
+                            <h3>Property Rules</h3>
+                            <p>Check-in: 12 PM Check-out: 11 AM</p>
+                            <li>Guests below 18 years of age are not allowed at the property.</li>
+                            <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
+                            <li>Pets are not allowed.</li>
+                        </div><br><br>
+
+
+                        <h1 class="Location">Hotel-images</h1>
+                        <div class="hotel-gallery" id="gallery">
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/moon_waves_1.jpg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/moon_waves_1.jpg ' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/moonwaves_7.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/moonwaves_7.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>        
+        
+                        <div class="hotel-gallery" id="gallery">
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/moonwaves_4.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/moonwaves_4.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/moonwaves_5.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/moonwaves_5.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/moonwaves_6.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/moonwaves_6.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <h1 class="Location">Location</h1>
                         <div class="map">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.5034146987045!2d76.70071387406396!3d8.738612393468848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05eff37e3fdc63%3A0x314ecc176371deb1!2sMoon%20Waves%20Beach%20Resort!5e0!3m2!1sen!2sin!4v1717518212830!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
