--- a/templates/nisara_details.html
+++ b/templates/nisara_details.html
@@ -87,29 +87,80 @@
                         </div>
                     </div>
                     <div class="hotel-name">
-                        <h2>Executive Villa King Room with Balcony</h2>
-                        <!-- <div class="button-element">
-                            <button class="view-other-rooms">View Other Rooms</button>
-                            <button class="book-now">Book This Now</button>
-                        </div> -->
-                        
-                        <p>For 2 Adults</p>
-                        <p>Room with Breakfast</p>
-                        <!-- <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p>+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p>
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
+                        <h2>About</h2>
                     </div>
-                    <!-- <div class="book">
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button>
-                    </div>
-                        <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p class="tax-price">+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p> -->
-                        <!-- <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
+                    <p class="tax-price">
+                        Cliff County is a sustainable homestay in Varkala, a 3-minute walk from Varkala Beach. This property encourages guests to <br> embrace nature with its eco-friendly arrangements. This homestay features free private parking, a 24-hour front desk, and free Wifi. <br> The accommodation provides airport transfers, while a bicycle rental service is also available. Each room has a private bathroom with a shower and free toiletries, <br> while some rooms include a balcony.A car rental service is available at Cliff County. Popular points of interest near the accommodation include <br> Odayam Beach, Aaliyirakkm Beach, and Varkala Cliff,Black Sand Beach, Kappil Beach. The nearest airport is Thiruvananthapuram International Airport, 25 miles from Cliff County.
+                    </p> <br>
+
+                    <span>Room Types</span><br>
+                        <div class="list_div">
+                            <li>Standard NON AC  --  Room Only</li>
+                            <li>deluxe  AC  --  Room Only</li>
+                        </div><br><br>
+                        <!-- <span>Property Rules</span><br> -->
+                        <div class="list_div">
+                            <h3>Property Rules</h3>
+                            <p>Check-in: 2 PM Check-out: 11 AM</p>
+                            <li>Guests below 18 years of age are not allowed at the property.</li>
+                        </div><br><br>
+
+
+                        <h1 class="Location">Hotel-images</h1>
+                        <div class="hotel-gallery" id="gallery">
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/nisara_homestay_1.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/nisara_homestay_1.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/nisara_out1.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/nisara_out1.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/nisara_bed.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/nisara_bed.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>        
+        
+                        <div class="hotel-gallery" id="gallery">
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/nisara_room1.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/nisara_room1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/nisara_room2.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/nisara_room2.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="gallery_item">
+                                <div class="gallery_img">
+                                    <img src="{% static 'image/property_img/nisara_kitchen.jpeg' %}" alt="">
+                                    <div class="hover">
+                                        <a class="light" href="{% static 'image/property_img/nisara_kitchen.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                   
                         <h1 class="Location">Location</h1>
                         <div class="map">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.616911168067!2d76.70902447406381!3d8.727877893631794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05ef623d1feb53%3A0xfbf972b1781698fb!2sNisara%20Homestay!5e0!3m2!1sen!2sin!4v1717518465665!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
