--- a/templates/skyframe_details.html
+++ b/templates/skyframe_details.html
@@ -86,29 +86,85 @@
                         </div>
                     </div>
                     <div class="hotel-name">
-                        <h2>Executive Villa King Room with Balcony</h2>
-                        <!-- <div class="button-element">
-                            <button class="view-other-rooms">View Other Rooms</button>
-                            <button class="book-now">Book This Now</button>
-                        </div> -->
-                        
-                        <p>For 2 Adults</p>
-                        <p>Room with Breakfast</p>
-                        <!-- <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p>+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p>
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
+                        <h2>About</h2>
                     </div>
-                    <!-- <div class="book">
-                        <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button>
+
+                    <p class="tax-price">
+                        Sky Frame beach reosrt is one of the best premium category resorts in Varaka. The location and the grounds, being perched on the south cliff of Varkala, <br> with an amazing view, points to the Arabian sea. The resort has four sea view rooms and 3 non sea facing rooms which are really good and spacious. <br> The resort has a peaceful and calm vibe along with our beautiful lawn area and the signature Varkala frame! There's direct beach access which is more like it's private. <br> Break fast is included and we have the best restaurant of Varkala but not in house. Food orders will be delivered to the resort ( No delivery charges. But preparation time and delivery time has to be considered)
+                    </p> <br>
+
+
+                    <span>Room Types</span><br>
+                    <div class="list_div">
+                        <li>Suite with Sea View  --  Room Only  &  Room with Breakfast Available</li>
                     </div>
-                        <p class="price">₹ 8,086 <span class="old-price">₹ 8,086</span></p>
-                        <p class="tax-price">+ ₹ 1,455 taxes & fees</p>
-                        <p class="non-refundable">Non-Refundable</p> -->
-                        <!-- <button class="view-other-rooms">View Other Rooms</button>
-                        <button class="book-now">Book This Now</button> -->
+                    <br><br>
+
+                    <!-- <span>Property Rules</span><br> -->
+                    <div class="list_div">
+                        <h3>Property Rules</h3>
+                        <p>Check-in: 1 PM  Check-out: 11 AM</p>
+                        <li>Guests below 18 years of age are not allowed at the property.</li>
+                        <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
+                        <li>Pets are not allowed.</li>
+                        <li>Unmarried couples are not allowed</li>
+                    </div><br><br>
+
+                    <h1 class="Location">Hotel-images</h1>
+                    <div class="hotel-gallery" id="gallery">
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/skyframe_room2.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/skyframe_room2.jpeg ' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/skyframe_resort.jpg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/skyframe_resort.jpg ' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty_inside3.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>        
+    
+                    <div class="hotel-gallery" id="gallery">
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/eva_room2.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/eva_room2.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/eva_room1.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/eva_room1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="gallery_item">
+                            <div class="gallery_img">
+                                <img src="{% static 'image/property_img/cliffcounty_inside5.jpeg' %}" alt="">
+                                <div class="hover">
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty_inside5.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                  
                         <h1 class="Location">Location</h1>
                         <div class="map">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.62708942456!2d76.70882107406382!3d8.726914593646386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05efab80c6eec1%3A0xd1d2472c7514bfd3!2sSky%20Frame%20Beach%20Resort!5e0!3m2!1sen!2sin!4v1717518608581!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
